# predicting_air_quality

./: eda-maxim.ipynb  eda.ipynb  feature-engineering-maxim.py  local_validation_results.csv  maxim-weater-imputation.ipynb  nischay_pipeline.ipynb  prophet_new_predictions (5).csv  pyproject.toml  submission_prophet_clean.csv  submission_prophet_enhanced.csv  submission_prophet_hybrid_o3.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: paris_meteostat_2020_2025.csv  test_featured.csv  weather_data.csv
src/Model Experimentation/: joao.ipynb
src/eda/: eda-maxim.ipynb  filling_na_qolmat.ipynb  joao.ipynb  time-series-kaggle.ipynb
src/features/: feature-engineering-maxim.py  feature_engineering_maxim.py  joao.py
submissions/: exp01_last_value.csv  exp03_xgb_temporal_only.csv  exp05_damped_iterative.csv  submission_best.csv  submission_blend_o3.csv  submission_calibrated.csv  submission_calibrated_o3.csv  submission_ensemble_70_30.csv  submission_ensemble_80_20.csv  submission_ensemble_80friend_20you.csv  submission_holtwinters.csv  submission_lgb_residual.csv  submission_prophet_2020.csv  submission_prophet_2021.csv  submission_prophet_2022.csv  submission_prophet_2023.csv  submission_recent_only.csv  submission_seasonal.csv  submission_toto.csv  submission_toto_hybrid_o3.csv  submission_toto_style.csv  submission_xgb_weather.csv
