[project]
name = "predicting-air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "holidays>=0.82",
    "ipykernel>=7.0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "prophet>=1.1.7",
    "requests>=2.32.5",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.7.0",
    "toto-ts>=0.1.4",
    "xgboost>=3.0.5",
]
